--- a/sources/gui/ui/MainWindow.ui
+++ b/sources/gui/ui/MainWindow.ui
@@ -8,7 +8,7 @@
     <x>0</x>
     <y>0</y>
     <width>888</width>
-    <height>714</height>
+    <height>744</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -690,6 +690,16 @@
                 </widget>
                </item>
               </layout>
+             </widget>
+            </item>
+            <item>
+             <widget class="QTextEdit" name="textLastDraw">
+              <property name="frameShape">
+               <enum>QFrame::NoFrame</enum>
+              </property>
+              <property name="readOnly">
+               <bool>true</bool>
+              </property>
              </widget>
             </item>
             <item>
