--- a/source/gui/ui/About.ui
+++ b/source/gui/ui/About.ui
@@ -13,25 +13,30 @@
     <height>452</height>
    </rect>
   </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
-  </property>
-  <property name="windowTitle">
-   <string>Event Loto</string>
-  </property>
-  <property name="modal">
-   <bool>true</bool>
-  </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QTextBrowser" name="textBrowser">
-     <property name="enabled">
-      <bool>true</bool>
-     </property>
      <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+         </sizepolicy>
+     </property>
+     <property name="windowTitle">
+         <string>Event Loto</string>
+     </property>
+     <property name="windowIcon">
+         <iconset resource="../../resources/EvenementLoto.qrc">
+             <normaloff>:/fav/icons/mainIcon.png</normaloff>:/fav/icons/mainIcon.png
+         </iconset>
+     </property>
+     <property name="modal">
+         <bool>true</bool>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+         <item>
+             <widget class="QTextBrowser" name="textBrowser">
+                 <property name="enabled">
+                     <bool>true</bool>
+                 </property>
+                 <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
@@ -65,15 +70,30 @@
       <enum>Qt::ScrollBarAlwaysOff</enum>
      </property>
      <property name="html">
-      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;                                                         &lt;span style=&quot; font-size:14pt;&quot;&gt;Event Loto Associatif&lt;/span&gt;                             &lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Pour le sou des écoles de Genay.                             &lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;le github: &lt;a href=&quot;https://github.com/Silmaen/EvenementLoto&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;Événement Loto&lt;/span&gt;&lt;/a&gt;                            &lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Auteur: Damien Lachouette.                             &lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Copyright (c) 2021.                        &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+             &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+             p, li { white-space: pre-wrap; }
+             &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:7.8pt;
+             font-weight:400; font-style:normal;&quot;&gt;
+             &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
+             -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Segoe UI'; font-size:9pt;&quot;&gt;
+             &lt;/span&gt;&lt;span style=&quot; font-family:'Segoe UI'; font-size:14pt;&quot;&gt;Event Loto Associatif&lt;/span&gt;&lt;span
+             style=&quot; font-family:'Segoe UI'; font-size:9pt;&quot;&gt; &lt;/span&gt;&lt;/p&gt;
+             &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
+             -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Segoe UI'; font-size:9pt;&quot;&gt;Pour
+             le sou des écoles de Genay. &lt;/span&gt;&lt;/p&gt;
+             &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
+             -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Segoe UI'; font-size:9pt;&quot;&gt;le
+             github: &lt;/span&gt;&lt;a href=&quot;https://github.com/Silmaen/EvenementLoto&quot;&gt;&lt;span style=&quot;
+             font-family:'Segoe UI'; font-size:9pt; text-decoration: underline; color:#0000ff;&quot;&gt;Événement Loto&lt;/span&gt;&lt;/a&gt;&lt;span
+             style=&quot; font-family:'Segoe UI'; font-size:9pt;&quot;&gt; &lt;/span&gt;&lt;/p&gt;
+             &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
+             -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Segoe UI'; font-size:9pt;&quot;&gt;Auteur:
+             Damien Lachouette. &lt;/span&gt;&lt;/p&gt;
+             &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
+             -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Segoe UI'; font-size:9pt;&quot;&gt;Copyright
+             (c) 2021. &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;
+         </string>
      </property>
      <property name="acceptRichText">
       <bool>true</bool>
@@ -156,7 +176,7 @@ You should have received a copy of the GNU General Public License along with thi
   </layout>
  </widget>
  <resources>
-  <include location="../../../resources/EvenementLoto.qrc"/>
+     <include location="../../resources/EvenementLoto.qrc"/>
  </resources>
  <connections>
   <connection>
