--- a/source/gui/ui/ConfigGeneral.ui
+++ b/source/gui/ui/ConfigGeneral.ui
@@ -3,26 +3,31 @@
  <class>ConfigGeneral</class>
  <widget class="QDialog" name="ConfigGeneral">
   <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>441</width>
-    <height>729</height>
-   </rect>
+      <rect>
+          <x>0</x>
+          <y>0</y>
+          <width>441</width>
+          <height>729</height>
+      </rect>
   </property>
-  <property name="windowTitle">
-   <string>Configuration générale</string>
-  </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QGroupBox" name="groupBox">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+     <property name="windowTitle">
+         <string>Configuration générale</string>
      </property>
-     <property name="minimumSize">
+     <property name="windowIcon">
+         <iconset resource="../../resources/EvenementLoto.qrc">
+             <normaloff>:/fav/icons/mainIcon.png</normaloff>:/fav/icons/mainIcon.png
+         </iconset>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+         <item>
+             <widget class="QGroupBox" name="groupBox">
+                 <property name="sizePolicy">
+                     <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                         <horstretch>0</horstretch>
+                         <verstretch>0</verstretch>
+                     </sizepolicy>
+                 </property>
+                 <property name="minimumSize">
       <size>
        <width>151</width>
        <height>61</height>
@@ -136,7 +141,7 @@
             <string>Importer</string>
            </property>
            <property name="icon">
-            <iconset resource="../../../resources/EvenementLoto.qrc">
+            <iconset resource="../../resources/EvenementLoto.qrc">
              <normaloff>:/icons/icons/date-to.png</normaloff>:/icons/icons/date-to.png</iconset>
            </property>
           </widget>
@@ -147,7 +152,7 @@
             <string>Exporter</string>
            </property>
            <property name="icon">
-            <iconset resource="../../../resources/EvenementLoto.qrc">
+            <iconset resource="../../resources/EvenementLoto.qrc">
              <normaloff>:/icons/icons/date-from.png</normaloff>:/icons/icons/date-from.png</iconset>
            </property>
           </widget>
@@ -186,12 +191,12 @@
            </property>
            <widget class="QWidget" name="scrollAreaWidgetContents">
             <property name="geometry">
-             <rect>
-              <x>0</x>
-              <y>0</y>
-              <width>419</width>
-              <height>468</height>
-             </rect>
+                <rect>
+                    <x>0</x>
+                    <y>0</y>
+                    <width>398</width>
+                    <height>447</height>
+                </rect>
             </property>
             <layout class="QHBoxLayout" name="horizontalLayout_3">
              <property name="leftMargin">
@@ -996,7 +1001,7 @@
                <string>Reset</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../resources/EvenementLoto.qrc">
+               <iconset resource="../../resources/EvenementLoto.qrc">
                 <normaloff>:/icons/icons/restart.png</normaloff>:/icons/icons/restart.png</iconset>
               </property>
              </widget>
@@ -1007,7 +1012,7 @@
                <string>Restorer</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../resources/EvenementLoto.qrc">
+               <iconset resource="../../resources/EvenementLoto.qrc">
                 <normaloff>:/icons/icons/countdown.png</normaloff>:/icons/icons/countdown.png</iconset>
               </property>
              </widget>
@@ -1143,7 +1148,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="../../../resources/EvenementLoto.qrc"/>
+  <include location="../../resources/EvenementLoto.qrc"/>
  </resources>
  <connections>
   <connection>
